plugins {
  id 'java-library'
  id 'architectury-plugin' version '3.4-SNAPSHOT'
  id 'dev.architectury.loom' version '0.11.0-SNAPSHOT' apply false
  id 'org.ajoberstar.reckon' version '0.13.1'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

architectury {
  minecraft = rootProject.minecraft_version
}

reckon {
  scopeFromProp()
  stageFromProp('beta', 'rc', 'final')
}

subprojects {
  apply plugin: 'dev.architectury.loom'

  dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
  }
}

allprojects {
  apply plugin: "architectury-plugin"

  java {
    toolchain {
      languageVersion = JavaLanguageVersion.of(17)
    }
  }

  group = rootProject.group
  description = rootProject.displayname
  archivesBaseName = rootProject.name

  tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
    options.release = 17
  }

  java {
    withSourcesJar()
  }
}